[gd_scene load_steps=3 format=3 uid="uid://bw2kfry8rswke"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_7bepc"]
[ext_resource type="PackedScene" uid="uid://nb8fh2swgkg5" path="res://scenes/ui/menus/main_menu.tscn" id="2_l3m3k"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_7bepc")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenu" parent="Control" instance=ExtResource("2_l3m3k")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="start_game" from="Control/MainMenu" to="." method="_on_main_menu_start_game"]
